2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (README): Add Copyright and License.

	* bin/perl-depends.pl: (POD::DESCRIPTION): Fix typos.
	(POD::OPTIONS): Remove --help-exclude. There is no such option.
	(POD::SEE ALSO): Remove cloc(1), add cpan(1).

2010-03-19 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl: (HELP::POD): Fix typos.

2010-03-18 Thu  Jari Aalto  <jari.aalto@cante.net>

	* ChangeLog: New file.

	* INSTAL: New file.

	* README: New file.

	* Makefile: New file.

	* bin/perl-depends.pl: New file.